all-modules/network/elastic.tf
resource "aws_eip" "elastic_id" {
  vpc = true
}
resource "aws_eip" "elastic_id-2" {
  vpc = true
}
